hphp/test/zend/good/Zend/tests/use_function/define_imported_before.php.expectf

Fatal error: Cannot use function foo\bar as bar because the name is already in use in %s/define_imported_before.php on line 6
